--- a/linearnaAlgebra/témy/vypočetGauss/index.html
+++ b/linearnaAlgebra/témy/vypočetGauss/index.html
@@ -65,9 +65,13 @@
                               index (je "najviac
                               vl'avo"), a
                               pomocou
-                              riadkovej operácie O1 tento riadok presunieme na prvé miesto.</li>
-                           <li>A2: Použitím riadkovej operácie O2
-                              vytvoríme v prvom riadku vedúcu jednotku, a postupným aplikovaním riadkových operácií O3
+                              riadkovej operácie <a class="linkTo" href="../riadkoveOperacie/index.html">O1</a> tento
+                              riadok presunieme
+                              na prvé miesto.</li>
+                           <li>A2: Použitím riadkovej operácie <a class="linkTo"
+                                 href="../riadkoveOperacie/index.html">O2</a>
+                              vytvoríme v prvom riadku vedúcu jednotku, a postupným aplikovaním riadkových operácií <a
+                                 class="linkTo" href="../riadkoveOperacie/index.html">O3</a>
                               dosiahneme, aby v stĺpci pod touto vedúcou jednotkou boli všetky prvky rovné nule.</li>
                            <li>A3: Odmyslíme
                               si prvý riadok a zopakujeme predchádzajúce dva kroky algoritmu na takto vzniknutej
@@ -78,7 +82,10 @@
                      </p>
                      <p> <strong>Redukovaný Gaussov (stupňovitý) tvar</strong> sa pomocou uvedeného algoritmu dostane
                         tak, že v kroku A2 sa pomocou
-                        postupného používania riadkovej operácie O3 postaráme o to, aby sme vynulovali aj prvky v stĺpci
+                        postupného používania riadkovej operácie <a class="linkTo"
+                           href="../riadkoveOperacie/index.html">O3</a>
+                        postaráme o to, aby sme vynulovali
+                        aj prvky v stĺpci
                         nad vedúcou jednotkou.</p>
                      <br>
                      <p style="color: grey">Príklad s podrobným postupom nájdete v záložke "Príklady"
@@ -102,7 +109,10 @@
                         $$R_3$$ a $$R_4$$ novú (ekvivalentnú) maticu s nezmeneným prvým riadkom a novým druhým, tretím a
                         štvrtým riadkom $$R'_2$$, $$R'_3$$ a $$R'_4$$. Symbolicky, vykonanie uvedených riadkových
                         operácií
-                        typu O3 označíme takto: $$R'_2=R_2+2R_1$$, $$R'_3=R_3+(-3)R_1$$, a $$R'_4=R_4+(-2)R_1$$.</p>
+                        typu <a class="linkTo" href="../riadkoveOperacie/index.html">O3</a> označíme takto:
+                        $$R'_2=R_2+2R_1$$,
+                        $$R'_3=R_3+(-3)R_1$$, a
+                        $$R'_4=R_4+(-2)R_1$$.</p>
                      <div class="mathjax_matrix table-responsive">$${\bf A}=\left( \begin{array}{rrrrr}
                         1 & -2 & 3 & -1 & 3 \\
                         -2 & 4 & -6 & 8 & -2 \\
