links + styles adjusted

--- a/linearnaAlgebra/témy/detStvMatice/index.html
+++ b/linearnaAlgebra/témy/detStvMatice/index.html
@@ -125,7 +125,7 @@
 
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
-                     <h5>Ukážkový príklad:</h5>
+                     <h5>Riešený príklad:</h5>
                      <br>
                      <p>Pomocou definície vypočítajme determinant matice</p>
                      <div class="mathjax_matrix">$$
@@ -172,7 +172,7 @@
                         (-1)^{4+3}.2.|{\bf A}_{43}| = 3.(-48) -2.(-5)= -134\ .
                         $$</div>
                      <br><br>
-                     <h6>Vypočítaj determinant matice</h6>
+                     <p> <strong>Príklady </strong>(vypočítaj determinant matice)</p>
                      <hr>
                      <br>
                      <div
