--- a/linearnaAlgebra/témy/deterRiadkoveOperacie/index.html
+++ b/linearnaAlgebra/témy/deterRiadkoveOperacie/index.html
@@ -60,11 +60,14 @@
                      <div style="text-align: center;">
                         <ul style="display: inline-block; text-align: left; margin: 2rem auto;" class="rules">
                            <li>D1: Ak $$\bf B$$ je matica, ktorá vznikne z $$\bf A$$ aplikáciou jednej riadkovej
-                              operácie O1, tak $$\vert{\bf B}\vert=-\vert{\bf A}\vert$$.</li>
-                           <li>D2: Nech matica $$\bf B$$ vznikne z $$\bf A$$ pomocou riadkovej operácie O2, t.j. tak, že
+                              operácie <a class="linkTo" href="../riadkoveOperacie/index.html">O1</a>, tak $$\vert{\bf
+                              B}\vert=-\vert{\bf A}\vert$$.</li>
+                           <li>D2: Nech matica $$\bf B$$ vznikne z $$\bf A$$ pomocou riadkovej operácie <a
+                                 class="linkTo" href="../riadkoveOperacie/index.html">O2</a>, t.j. tak, že
                               niektorý riadok matice $$\bf A$$ sa vynásobí konštantou $$c$$. Potom $$\vert{\bf
                               B}\vert=c.\vert{\bf A}\vert$$.</li>
-                           <li>D3: Aplikáciou riadkovej operácie O3 sa determinant nemení.</li>
+                           <li>D3: Aplikáciou riadkovej operácie <a class="linkTo"
+                                 href="../riadkoveOperacie/index.html">O3</a> sa determinant nemení.</li>
                            <li>D4: Ak v matici $$\bf A$$ je niektorý riadok násobkom iného riadku, tak $$\vert{\bf
                               A}\vert=0$$.</li>
                            <li>D5: Ak $${\bf A}=[a_{ij}]_{n\times n}$$ je trojuholníková matica, tak jej determinant je
@@ -79,7 +82,7 @@
                         bude automaticky trojuholníková matica, ktorej determinant je (podl'a D5) súčinom jej
                         diagonálnych prvkov. Pri výpočte nezabúdame zmenit' znamienko determinantu pri kažej výmene
                         dvoch riadkov (pravidlo D1) a vynásobit' determinant konštantou pri každom použití riadkovej
-                        operácie O2 (pravidlo D2).</p>
+                        operácie <a class="linkTo" href="../riadkoveOperacie/index.html">O2</a> (pravidlo D2).</p>
                   </div>
                   <div class="tab-pane fade" id="sample-problems" role="tabpanel" aria-labelledby="sample-problems-tab">
                      <h5>Kombináciou rôznych metód vypočítajme determinant:</h5>
