--- a/linearnaAlgebra/témy/invMaticaVypocet/index.html
+++ b/linearnaAlgebra/témy/invMaticaVypocet/index.html
@@ -58,12 +58,13 @@
                <ul class="nav nav-tabs nav-fill" style="margin-bottom: 3rem;" id="myTab" role="tablist"></ul>
                <div class="tab-content" id="myTabContent">
                   <div class="tab-pane fade show active" id="theory" role="tabpanel" aria-labelledby="theory-tab">
-                     <p>Na výpočet inverznej matice (prípadne na vylúčenie jej existencie) možno použit' nasledujúci
+                     <p>Na výpočet inverznej matice pomocou jednotkovej matice (prípadne na vylúčenie jej existencie)
+                        možno použit' nasledujúci
                         jednoduchý postup:</p>
                      <div style="text-align: center;">
                         <ul style="display: inline-block; text-align: left; margin: 2rem auto;" class="rules">
                            <li>Nech $${\bf A}$$ je štvorcová matica typu $$n\times n$$ .</li>
-                           <li>Utvoríme maticu $${\bf C}$$ typu $$n\times
+                           <li>Vytvoríme maticu $${\bf C}$$ typu $$n\times
                               2n$$ tak, že prvých $$n$$ stĺpcov bude
                               tvorených
                               maticou $$\bf A$$ , a zvyšných $$n$$
@@ -174,7 +175,7 @@
                         -2 & 1 & -1/2 \end{array}\right)\ .
                         $$</div>
                      <br><br>
-                     <h6>Vypočítaj inverznú maticu.</h6>
+                     <p><strong>Príklady </strong> (vypočítaj inverznú maticu)</p>
                      <hr>
                      <div
                         style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); grid-gap: 2rem; justify-items: center; align-items: center;">
