--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -109,7 +109,7 @@
       <br>
       <h3 class="nadpis" style="text-align: center;">Kalkulačky:</h3>
       <div id="card-holder">
-        <a href="/linearnaAlgebra/témy/algebrOperacieMatice/index.html?tab=practice-problems">
+        <a href="../linearnaAlgebra/témy/algebrOperacieMatice/index.html?tab=practice-problems">
           <div class="card" style="width: 13rem; height: 17rem;">
             <img class="card-img-top" src="../images/nsobMat.png" alt="Card image cap" />
             <div class="card-body">
@@ -119,7 +119,7 @@
             </div>
           </div>
         </a>
-        <a href="/linearnaAlgebra/témy/invMaticaVypocet/index.html?tab=practice-problems">
+        <a href="../linearnaAlgebra/témy/invMaticaVypocet/index.html?tab=practice-problems">
           <div class="card" style="width: 13rem; height: 17rem;">
             <img class="card-img-top" src="../images/inveMat.png" alt="Card image cap" />
             <div class="card-body">
@@ -129,7 +129,7 @@
             </div>
           </div>
         </a>
-        <a href="/linearnaAlgebra/témy/detStvMatice/index.html?tab=practice-problems">
+        <a href="../linearnaAlgebra/témy/detStvMatice/index.html?tab=practice-problems">
           <div class="card" style="width: 13rem; height: 17rem;">
             <img class="card-img-top" src="../images/deterRozvoj.png" alt="Card image cap" />
             <div class="card-body">
@@ -139,7 +139,7 @@
             </div>
           </div>
         </a>
-        <a href="/funkcie/index.html#scrollspyHeading3">
+        <a href="../funkcie/index.html#scrollspyHeading3">
           <div class="card" style="width: 13rem; height: 17rem;">
             <img class="card-img-top" src="../images/derivFn.png" alt="Card image cap" />
             <div class="card-body">
