--- a/landingPage/index.html
+++ b/landingPage/index.html
@@ -173,7 +173,7 @@
         kalkulačky, ktoré ti pomôžu či už pri kontrole výsledku, alebo pre
         správne navedenie k riešeniu. Pre tému funkcií je k dispozícii
         vizualizačný nástroj, pomocou ktorého si môžete vykresliť akúkoľvek
-        funkciu.
+        funkciu. Zdroj teórie <a href="https://www.math.sk/skripta/skripta.html">TU</a>.
       </p>
     </div>
 
